--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -12,7 +12,7 @@ services:
       args:
         NODE_ENV: production
     environment:
-      DATABASE_URL: "mongodb://mongo:27017/loopback-docker-boilerplate"
+      DATABASE_URL: "mongodb://gastondev:GastonBot@ds125288.mlab.com:25288/gastondev"
     volumes:
       - /usr/src/app/storage
     depends_on:
