--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -13,7 +13,7 @@ services:
       args:
         NODE_ENV: production
     environment:
-      DATABASE_URL: "mongodb://mongo:27017/loopback-docker-boilerplate"
+      DATABASE_URL: "mongodb://gaston:GastonBot@ds125288.mlab.com:25288/gaston"
     volumes:
       - /usr/src/app/storage
     ports:
