--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cors": "^2.5.2",
     "express-flash": "0.0.2",
     "express-session": "^1.15.6",
+    "hapi": "^17.2.0",
     "helmet": "^1.3.0",
     "loopback": "^3.16.0",
     "loopback-boot": "^2.6.5",
